--- a/package.json
+++ b/package.json
@@ -2,23 +2,18 @@
   "name": "royalescraper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
-    "@types/node": "^17.0.36",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "cli-progress": "^3.11.1"
   },
   "dependencies": {
     "@types/node-fetch": "^2.6.1",
-    "cli-progress": "^3.11.1",
     "fetch-throttle": "^0.1.0"
   }
 }
