--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "ts-node": "^10.8.0"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.6.1",
-    "fetch-throttle": "^0.1.0"
+    "@types/node-fetch": "^2.6.1"
   }
 }
