--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "create-scheme": "ts-node schemeCreator/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,8 @@
     "ts-node": "^10.8.0"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.6.1"
+    "@types/node-fetch": "^2.6.1",
+    "generate-schema": "^2.6.0",
+    "json-diff": "^0.9.0"
   }
 }
